--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<tilte></tilte>
+		<title>Calorie Tracker</title>
 		<!-- JAVASCRIPT API source -->
 		<script src="http://platform.fatsecret.com/js?key=1d1e36bf07f84761b76cd39e0ad1c1dd&auto_template=false"></script>
 		
