--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -1,23 +1,47 @@
 <html>
 	<head>
 		<title>Calorie Tracker</title>
+
 		<!-- JAVASCRIPT API source -->
 		<script src="http://platform.fatsecret.com/js?key=1d1e36bf07f84761b76cd39e0ad1c1dd&auto_template=false"></script>
-		
-		<!-- We can customize our calendar through the calendar.css -->
-		<!-- this css file comes from http://platform.fatsecret.com/api/Default.aspx?screen=jsapicssr -->
-		<link rel="stylesheet" href="css/calendar.css" type="text/css" />
-		
+
+		<!-- JQUERY LIBRARY -->
+		<script type="text/javascript" src="/public/jquery-1.2.6.min.js"</script>
 		<script src="/public/Calendar.js"></script>
 		<script src="/public/jquery.js"></script>
+
+		<!-- We can customize our calendar through the calendar.css -->
+		<!-- this css file comes from http://platform.fatsecret.com/api/Default.aspx?screen=jsapicssr -->
+		<link rel="stylesheet" href="css/calendar.css" type="text/css" />	
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
-		
 	</head>
 	
 	<body>
-		
-		<h2>Calorie Tracker Beta !</h2>
-		
+		<h2>Calorie Tracker Beta</h2>
+		<div id="tabs_container">
+			<ul id="tabs">
+				<li class="active">
+					<a href="#" rel="#calendar_tab" class="tab">Calendar View</a>
+					</li>
+					<li><a href="#" rel="#graph_tab" class="tab">Analysis View</a></li>
+			</ul>	
+		</div> <!-- end tabs_container -->
+
+		<div class="clear"></div> <!-- Used so the contents don't appear to right of tabs -->
+
+		<!-- Contents of each tab -->
+		<div class="tab_contents_container">
+			<!-- Calendar Tab contents -->
+			<div id="calendar_tab" class="tab_contents tab_contents_active">
+				Test 1
+			</div>
+
+			<!-- Analysis Tab contents -->
+			<div id="graph_tab" class="tab_contents">
+				Test 2
+			</div>
+		</div>
+
 		<script>
 			// Sample of using the javascript api of FATSECRET platform
 			fatsecret.setContainer('container'); 
