--- a/css/calendar.css
+++ b/css/calendar.css
@@ -36,7 +36,7 @@
 /* today's cell */
 .fatsecret_day_today
 {
-	background-color: #FFFFCE;
+	background-color: #DDD;
 }
 
 /* all cells that are not blank or today */
