--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+*{
+	margin:0;
+	padding:0;
+	font-family: Arial, Helvetica, monotype;
+	/*border: red 1px dotted;*/
+}
+
+body{
+	/*background:#ccc;*/
+	min-width:800px;
+}
+
 h2{
 	font-size: 55px;
 	text-align: center;
