--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,54 @@ body{
 	min-width:800px;
 }
 
+a{
+	text-decoration:none;
+}
+
 h2{
-	font-size: 55px;
+	font-size: 45px;
+	margin-top:20px;
 	text-align: center;
+}
+
+#fatsecret_output_0, #fatsecret_output_2 {
+	color:#EEE;
+	position:float;
+	float:left;
+	margin:5px 0px 0px 29px; 
+	display:block;
+}
+
+#fatsecret_output_0{
+	margin-left:21px;
+}
+
+
+.date{
+	display:inline-block;	
+	font-size:20pt;
+	margin-left:300px;
+	margin-right:270px;
+	margin-bottom:10px;
+}
+
+.monthbutton{
+	height: 25px;
+	width: 110px;
+	border:1px #aaa solid;
+	display:inline-block;
+	background:#ddd;
+	-webkit-border-radius:3px;
+	-moz-border-radius:3px;
+	border-radius:3px;
+	margin-top:25px;
+	margin-left:25px;
+}
+
+.monthbutton:hover {
+	background:#ccc;
+}
+
+a.monthbutton{
+	color:#EEE;
 }
