--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -17,6 +17,11 @@
 		<link rel="stylesheet" href="css/calendar.css" type="text/css" />	
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
 		<link rel="stylesheet" href="css/tab.css" type="text/css" />
+
+		<script src="/public/graph.js"></script>
+		<script src="/public/jquery.js"></script>
+		<script src="/public/jquery.flot.js"></script>
+		<link rel="stylesheet" href="css/style.css" type="text/css" />
 	</head>
 
 	<body>
@@ -34,10 +39,13 @@
 
 			<!-- Contents of each tab -->
 			<div class="tab_contents_container">
+
 				<!-- Calendar Tab contents -->
 				<div id="calendar_tab" class="tab_contents tab_contents_active">
+
+					<!-- FatSecret API Embeds -->
 					<div style="width:1000px; margin:0 auto;" id="holder">
-						<!-- Here is the magic happens -->
+						<script> fatsecret.setCanvas("calendar.get_month"); </script> 
 						<div class="monthbutton">
 							<script>fatsecret.writeHolder("previousmonth");</script> 
 						</div>
@@ -48,19 +56,36 @@
 							<script>fatsecret.writeHolder("nextmonth");</script> 	
 						</div>
 						<script>fatsecret.writeHolder("calendar");</script> 
-
 					</div>
 				</div>
 
 				<!-- Analysis Tab contents -->
 				<div id="graph_tab" class="tab_contents">
-					<div id="container"></div>
-					<script>
-						// Sample of using the javascript api of FATSECRET platform
-						fatsecret.setCanvas("calendar.get_month");
-					</script> 
+
+					<!-- Graph -->
+					<table style="text-align:center">
+						<tr>
+							<td></td>
+							<td>Calories and Weight for Month</td>
+							<td> </td>
+						</tr>
+						<tr>
+							<td></td>
+							<td>
+								<div id="placeholder" style="width:600px;height:300px"></div>
+							</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+					</table>
+
 				</div>
 			</div> <!-- end tabs_container -->
+
 		</div>
 	</body>
 </html>
