--- a/css/tab.css
+++ b/css/tab.css
@@ -11,6 +11,11 @@ a:focus {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	margin:auto;
+	background:#fff;
+}
+
+.tabs{
+	background:#eee;
 }
 
 #tabs_container ul.tabs {
