--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -63,7 +63,7 @@
 				<div id="graph_tab" class="tab_contents">
 
 					<!-- Graph -->
-					<table style="text-align:center">
+					<table id="graph" style="text-align:center">
 						<tr>
 							<td></td>
 							<td>Calories and Weight for Month</td>
