added analysis selection

--- a/view/graph.html
+++ b/view/graph.html
@@ -26,6 +26,7 @@
 
 	    <td>
 	      <div id="placeholder" style="width:600px;height:300px"></div>
+	      <p id="choices" style="float:right; width:135px;"></p>
 	    </td>
 
 	    <td></td>
