fix bugs in Calendar.js

--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -8,7 +8,7 @@
 
 		<!-- TABBING JS -->
 		<script type="text/javascript" src="/public/scripts/tab.js"</script>
-		<script src="/public/scripts/Calendar.js"></script>
+		<script src="/public/Calendar.js"></script>
 		<script src="/public/jquery.js"></script>
 
 
