--- a/view/form.html
+++ b/view/form.html
@@ -22,6 +22,18 @@ Food:<input type="text" name="food" id="foodentry"><br>
 
 
 </form>
+
+<div id="data_container">
+<table border="3" id="table_container">
+<tr>
+<th>Type</th>
+<th>Food Content</th>
+</tr>
+
+</table>
+
+</div>
+
 </html>
 
 <!-- <input type="submit" value="Submit" form="foodtracker"> -->
