--- a/view/form.html
+++ b/view/form.html
@@ -1,7 +1,7 @@
 <html>		
 <head>
 <script src="../public/scripts/jquery.js"></script>
-<script src="../public/scripts/jquery.js"></script>
+<script src="../public/scripts/form.js"></script>
 </head>
 
 <select id="meal_type" name="meal_type" form="foodtracker">
