--- a/view/form.html
+++ b/view/form.html
@@ -16,22 +16,34 @@
 <form name="input" action="html_form_action.asp" method="post" id="foodtracker">
 
 Username: <input type="text" name="user" id="username"><br>
-Food:<input type="text" name="food" id="foodentry"><br>
+Food:	<input type="text" name="food" id="foodentry" value="" size="85" maxlength="255" autocomplete="off">
+<div id="q_results_container" style="display: none;">
+	<div id="q_results" style="width:550px; height:100px; position:relative; top:0px; border:solid #cccccc 1px; overflow:scroll;"></div>
+</div>
 
 <input type="button" value="Show" id="saveInJavaScript">
 
 
+<!-- <input type="text" id="ntq" name="q" value="" size="85" maxlength="255" autocomplete="off">
+
+<div id="q_results_container">
+
+	<div align="right" class="button" style="background:#cccccc; border-bottom:1px dotted #333333; width:552px; position:relative; top:0px; right:0px;" onclick="NutritionTracker.handleManualEntry(event);"><b>x</b>&nbsp;&nbsp;</div>
+
+	<div id="q_results" style="width:550px; height:100px; position:relative; top:0px; border:solid #cccccc 1px; overflow:scroll;"></div>
+
+</div>
+ -->
+
 </form>
 
 <div id="data_container">
-<table border="3" id="table_container">
-<tr>
-<th>Type</th>
-<th>Food Content</th>
-</tr>
-
+	<table border="3" id="table_container">
+	<tr>
+	<th>Type</th>
+	<th>Food Content</th>
+	</tr>
 </table>
-
 </div>
 
 </html>
