graph looking nice

--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -12,6 +12,7 @@
 		<!-- graph JS -->
 		<script src="/public/scripts/graph.js"></script>
 		<script src="/public/scripts/jquery.flot.js"></script>
+		<script src="/public/scripts/jquery.flot.time.js"></script>
 
 		<!-- We can customize our calendar through the calendar.css -->
 		<!-- this css file comes from http://platform.fatsecret.com/api/Default.aspx?screen=jsapicssr -->
