--- a/view/form.html
+++ b/view/form.html
@@ -6,21 +6,25 @@
 
 <body>
 
+
 <form id="FoodSearch">
 
-item: 
-<input type="text" id="search_query" >
-<!-- <input type="submit" value="Search" id="search"> -->
-
+	item: <input type="text" id="search_query" style="width:500px;" > <br>
+	<!-- <input type="submit" value="Search" id="search"> -->
+	Calories: <input type="text" id="calories_field"> 
+	<input type="hidden" id="foodid">
+	
+	<input type="button" id="btn_additem" value="Add!">
 </form> 
 
+<div id="food_choose"></div>
+
 <div id="results_wrapper">
-	<div id="results">
-	
-	</div>
+	<div id="results" style="width:550px; height:100px; position:relative; top:0px; border:solid #cccccc 1px; overflow:scroll;"></div>
 </div>
 
 
+<!--
 <select id="meal_type" name="meal_type" form="foodtracker">
 	<option value="Breakfast">Breakfast</option>
 	<option value="Lunch">Lunch</option>
@@ -28,8 +32,10 @@ item:
 	<option value="Snack">Snack</option>
 	<option value="Beverage">Beverage</option>
 </select>
+-->
 
 
+<!--
 <form name="input" action="html_form_action.asp" method="post" id="foodtracker">
 
 Username: <input type="text" name="user" id="username"><br>
@@ -39,6 +45,7 @@ Food:	<input type="text" name="food" id="foodentry" value="" size="85" maxlength
 </div>
 
 <input type="button" value="Show" id="saveInJavaScript">
+-->
 
 
 <!-- <input type="text" id="ntq" name="q" value="" size="85" maxlength="255" autocomplete="off">
@@ -52,16 +59,19 @@ Food:	<input type="text" name="food" id="foodentry" value="" size="85" maxlength
 </div>
  -->
 
-</form>
+<!-- </form> -->
 
 <div id="data_container">
 	<table border="3" id="table_container">
 		<tr>
-			<th>Type</th>
+			<!-- <th>Type</th> -->
 			<th>Food Content</th>
+			<th>Calories</th>
 		</tr>
 	</table>
 </div>
+
+<button id='btn_addmeal'>Add Meal</button>
 
 
 </body>
