adding lightbox (popup)

--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Calorie Tracker</title>
+		<title>ShapeUp Calorie Tracker</title>
 		<!-- JQUERY LIBRARY--> 
 		<script src="/public/scripts/jquery.js"></script>
 		<!-- JAVASCRIPT API source -->
@@ -24,7 +24,7 @@
 	</head>
 
 	<body>
-		<h2>Calorie Tracker Beta</h2>
+		<h2>ShapeUp Calorie Tracker</h2>
 		<div id="tabs_container">
 			<ul class="tabs">
 				<li class="active">
@@ -97,6 +97,11 @@
 				</div>
 			</div> <!-- end tabs_container -->
 
+
+
 		</div>
+			<!-- HTML FOR LIGHTBOX -->
+			<div id = "light" class="white_content">Hi, I'm a test test test</div>
+			<div id="fade" class="black_overlay"></div>
 	</body>
 </html>
