--- a/css/calendar.css
+++ b/css/calendar.css
@@ -100,3 +100,35 @@
 {
 }
 */
+
+
+/* CSS FOR LIGHTBOX */
+.black_overlay{
+	display:none;
+	position:absolute;
+	top:0%;
+	left:0%;
+	width:100%;
+	height:100%;
+	background-color: black;
+	z-index:1001;
+	-moz-opacity: 0.8;
+	opacity:.80;
+	filter: alpha(opacity=80);
+}
+
+.white_content{
+	display:none;
+	position:absolute;
+	top:20%;
+	left:25%;
+	width:50%;
+	height:50%;
+	padding:16px;
+	background-color:#fff;
+	z-index:1002;
+	overflow: auto;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+}
