added calendar for graph

--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -16,6 +16,7 @@
 		<script src="/public/scripts/graph.js"></script>
 		<script src="/public/scripts/jquery.flot.js"></script>
 		<script src="/public/scripts/jquery.flot.time.js"></script>
+		<script src="/public/scripts/jquery-ui.js"></script>
 
 		<!-- We can customize our calendar through the calendar.css -->
 		<!-- this css file comes from http://platform.fatsecret.com/api/Default.aspx?screen=jsapicssr -->
@@ -95,6 +96,7 @@
 							<td>
 								<div id="placeholder" style="width:600px;height:300px"></div>
 								<p id="choices" style="float:right; width:135px;"></p>
+								<p>Start: <input type="text" id="start"/> End: <input type="text" id="end"/></p>
 							</td>
 							<td></td>
 						</tr>
