--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -100,8 +100,32 @@
 
 
 		</div>
-			<!-- HTML FOR LIGHTBOX -->
-			<div id = "light" class="white_content">Hi, I'm a test test test</div>
-			<div id="fade" class="black_overlay"></div>
+		<div id = "dayData">
+			<h3>Detailed Day Information</h3>
+			<h4>Click on a calendar date to view</h4>
+			<table id="box-table-a">
+				<thead>
+					<tr>
+						<th>Meal</th>
+						<th>Status</th>
+						<th>Calorie Count</th>
+					<tr>
+				</thead>
+					<td>Breakfast</td>
+				</tr>
+				<tr>
+					<td>Lunch</td>
+				</tr>
+				<tr>
+					<td>Dinner</td>
+				</tr>
+				<tr>
+					<td>Snack/Other</td>
+				</tr>
+			</table>
+		</div>
+		<!-- HTML FOR LIGHTBOX -->
+		<div id = "light" class="white_content">Hi, I'm a test test test</div>
+		<div id="fade" class="black_overlay"></div>
 	</body>
 </html>
