--- a/css/calendar.css
+++ b/css/calendar.css
@@ -132,3 +132,66 @@
 	-moz-border-radius: 3px;
 	border-radius: 3px;
 }
+
+/* CSS FOR DAILY DATA */
+#dayData{
+	display:block;
+	background:white;
+	width:850px;
+	height:140px;
+	border:#ccc 1px solid;
+	margin: auto;
+	margin-top:20px;
+	margin-bottom:30px;
+	padding:20px;
+}
+
+
+
+
+
+
+
+
+
+#box-table-a {
+font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+font-size: 12px;
+width: 480px;
+text-align: left;
+border-collapse: collapse;
+margin: 20px;
+}
+
+#box-table-a th {
+font-size: 13px;
+font-weight: normal;
+background: #B9C9FE;
+border-top: 4px solid #AABCFE;
+border-bottom: 1px solid white;
+color: #039;
+padding: 8px;
+}
+
+#box-table-a td {
+background: #E8EDFF;
+border-bottom: 1px solid white;
+color: #669;
+border-top: 1px solid transparent;
+padding: 8px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
