--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -29,6 +29,7 @@
 
 	<body>
 		<h2>ShapeUp Calorie Tracker</h2>
+
 		<div id="tabs_container">
 			<ul class="tabs">
 				<li class="active">
@@ -79,6 +80,44 @@
 
 
 					</div>
+
+					<div id = "dayData">
+						<div id = "dayDataHeader">
+							<h3>Detailed Day Information</h3>
+							<h4>Click on a calendar date to view</h4>
+						</div>
+			<table id="box-table-a">
+				<thead>
+					<tr>
+						<th>Meal</th>
+						<th>Status</th>
+						<th>Calorie Count</th>
+					</tr>
+				</thead>
+					<tr>
+						<td>Breakfast</td>
+						<td>Unrecorded</td>
+						<td> n/a </td>
+					</tr>
+					<tr>
+						<td>Lunch</td>
+						<td>Unrecorded</td>
+						<td> n/a </td>
+
+					</tr>
+					<tr>
+						<td>Dinner</td>
+						<td>Unrecorded</td>
+						<td> n/a </td>
+					</tr>
+					<tr>
+						<td>Snack/Other</td>
+						<td>Unrecorded</td>
+						<td> n/a </td>
+					</tr>
+				</table>
+			</div>
+
 				</div>
 
 				<!-- Analysis Tab contents -->
@@ -113,30 +152,7 @@
 
 
 		</div>
-		<div id = "dayData">
-			<h3>Detailed Day Information</h3>
-			<h4>Click on a calendar date to view</h4>
-			<table id="box-table-a">
-				<thead>
-					<tr>
-						<th>Meal</th>
-						<th>Status</th>
-						<th>Calorie Count</th>
-						<tr>
-						</thead>
-						<td>Breakfast</td>
-					</tr>
-					<tr>
-						<td>Lunch</td>
-					</tr>
-					<tr>
-						<td>Dinner</td>
-					</tr>
-					<tr>
-						<td>Snack/Other</td>
-					</tr>
-				</table>
-			</div>
+
 
 			<!-- HTML FOR LIGHTBOX -->
 			<div id = "light" class="white_content">
