--- a/css/calendar.css
+++ b/css/calendar.css
@@ -3,13 +3,29 @@
 {
 	font-size: 125%;
 	border-collapse: collapse;
-	width: 95%;
-	margin: 0 auto;	
+	width: 600px;
+	float:left;
+	margin: 20px 0px 20px 15px;	
+	border: 2px solid #AABCFE;
+
+}
+
+
+#fatsecret_output_3{
+	float:left;
+	margin:0;
+
+}
+
+.fatsecret_day_number{
+	font-size:9pt;
+	color: #669;
 }
 
 .fatsecret_calendar tr td
 {
 	padding: 2px;
+	border: 1px solid #AABCFE;
 }
 
 /* days row (Sun, Mon, Tues, etc) */
@@ -18,6 +34,8 @@
 	width: 14%;
 	font-weight: 700;
 	text-align: center;
+	background-color: #B9C9FE;
+
 }
 
 /* all rows that are not the days row */
@@ -101,6 +119,10 @@
 }
 */
 
+.date{
+	width: 200px;
+	margin:0 0 0 100px !important;
+}
 
 /* CSS FOR LIGHTBOX */
 .black_overlay{
@@ -137,48 +159,57 @@
 #dayData{
 	display:block;
 	background:white;
-	width:850px;
-	height:140px;
+	width:320px;
+	height:300px;
 	border:#ccc 1px solid;
 	margin: auto;
-	margin-top:20px;
+	margin-top:60px;
+	margin-left:30px;
 	margin-bottom:30px;
 	padding:20px;
+	padding-left:0px;
+	float:left;
 }
 
 
-
-
-
-
-
-
+#dayDataHeader{
+	float left;
+	display:inline-block;
+	padding-left:20px;
+}
 
 #box-table-a {
-font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
-font-size: 12px;
-width: 480px;
-text-align: left;
-border-collapse: collapse;
-margin: 20px;
+	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+	font-size: 12px;
+	width: 300px;
+	text-align: left;
+	border-collapse: collapse;
+	display:block;
+	float:right;
+	position:relative;
+	margin: 30px 0px 0px auto;
 }
 
 #box-table-a th {
-font-size: 13px;
-font-weight: normal;
-background: #B9C9FE;
-border-top: 4px solid #AABCFE;
-border-bottom: 1px solid white;
-color: #039;
-padding: 8px;
+	font-size: 13px;
+	font-weight: normal;
+	background: #B9C9FE;
+	border-top: 4px solid #AABCFE;
+	border-bottom: 1px solid white;
+	color: #039;
+	padding: 8px;
 }
 
 #box-table-a td {
-background: #E8EDFF;
-border-bottom: 1px solid white;
-color: #669;
-border-top: 1px solid transparent;
-padding: 8px;
+	background: #E8EDFF;
+	border-bottom: 1px solid white;
+	color: #669;
+	border-top: 1px solid transparent;
+	padding: 14px 4px 14px 4px;
+}
+
+#box-table-a td:last-child {
+	text-align:center;
 }
 
 
