--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -76,7 +76,7 @@
 						</div>
 						<div id="container"></div> 
 					
-		
+						
 
 
 					</div>
@@ -156,18 +156,41 @@
 
 			<!-- HTML FOR LIGHTBOX -->
 			<div id = "light" class="white_content">
+				
+				
+				<form id="mealType">
+					<span>Meal Type : </span>
+					<input type="radio" name="group1" id="breakfast" value="breakfast" checked>breakfast
+					<input type="radio" name="group1" id="lunch" value="lunch">lunch 
+					<input type="radio" name="group1" id="dinner" value="dinner">dinner
+					<input type="radio" name="group1" id="snack" value="snack">snack
+				</form>
 
-
+				
 				<form id="FoodSearch">
 
-					item: <input type="text" id="search_query" style="width:500px;" > <br>
+					item: <input type="text" id="search_query" style="width:500px;" > 
 					<!-- <input type="submit" value="Search" id="search"> -->
-					Calories: <input type="text" id="calories_field"> 
+					<input type="hidden" id="calories_field"> 
 					<input type="hidden" id="foodid">
-
+								
 					<input type="button" id="btn_additem" value="Add!">
 				</form> 
-
+				
+				<span>servings:</span>
+				<select id="fruit_servings" name="fruit_servings">
+						<option value="1">1</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5</option>
+						<option value="6">6</option>
+						<option value="7">7</option>
+						<option value="8">8</option>
+						<option value="9">9</option>
+						<option value="10">10</option>
+				</select>
+				
 				<div id="food_choose"></div>
 
 				<div id="results_wrapper">
@@ -211,13 +234,16 @@
 					-->
 
 					<!-- </form> -->
-
+						
 				<div id="data_container">
 					<table border="3" id="table_container">
 						<tr>
 							<!-- <th>Type</th> -->
+							<th>Type</th>
+							<th>Servings</th>
 							<th>Food Content</th>
-							<th>Calories</th>
+							<th>Total Calories</th>
+							<th>Delete</th>
 						</tr>
 					</table>
 				</div>
