--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -23,7 +23,7 @@
 		<link rel="stylesheet" href="css/calendar.css" type="text/css" />	
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
 		<link rel="stylesheet" href="css/tab.css" type="text/css" />
-		
+		<link rel="stylesheet" href="css/lightbox.css" type="text/css" />	
 		
 	</head>
 
@@ -76,8 +76,6 @@
 						</div>
 						<div id="container"></div> 
 					
-		
-
 
 					</div>
 
@@ -149,18 +147,20 @@
 				</div>
 			</div> <!-- end tabs_container -->
 
-
-
 		</div>
 
 
 			<!-- HTML FOR LIGHTBOX -->
 			<div id = "light" class="white_content">
-
-
+				<h5>Detailed Meal Entry Form</h5>
+				<!-- FOOD SEARCH FORM -->
 				<form id="FoodSearch">
+					Search For Food Item: <input type="text" id="search_query"> <br>
+				<div id="food_choose"></div>
 
-					item: <input type="text" id="search_query" style="width:500px;" > <br>
+				<div id="results_wrapper">
+					<div id="results"></div>
+				</div>
 					<!-- <input type="submit" value="Search" id="search"> -->
 					Calories: <input type="text" id="calories_field"> 
 					<input type="hidden" id="foodid">
@@ -168,11 +168,7 @@
 					<input type="button" id="btn_additem" value="Add!">
 				</form> 
 
-				<div id="food_choose"></div>
 
-				<div id="results_wrapper">
-					<div id="results" style="width:550px; height:100px; position:relative; top:0px; border:solid #cccccc 1px; overflow:scroll;"></div>
-				</div>
 
 
 				<!--
@@ -213,12 +209,15 @@
 					<!-- </form> -->
 
 				<div id="data_container">
-					<table border="3" id="table_container">
-						<tr>
-							<!-- <th>Type</th> -->
-							<th>Food Content</th>
-							<th>Calories</th>
-						</tr>
+					<table class="box-table-b" id="table_container">
+						<thead>
+							<tr>
+								<!-- <th>Type</th> -->
+								<th>Food Item</th>
+								<th>Quantity</th>
+								<th>Calories</th>
+							</tr>
+						</thead>
 					</table>
 				</div>
 
