--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -158,7 +158,7 @@
 				
 				<form id="mealType">
 					<span>Meal Type : </span>
-					<input type="radio" name="group1" id="breakfast" value="breakfast" checked>breakfast
+					<input class ="mealType" type="radio" name="group1" id="breakfast" value="breakfast" checked>breakfast
 					<input type="radio" name="group1" id="lunch" value="lunch">lunch 
 					<input type="radio" name="group1" id="dinner" value="dinner">dinner
 					<input type="radio" name="group1" id="snack" value="snack">snack
@@ -177,7 +177,7 @@
 					<input type="button" id="btn_additem" value="Add!">
 				</form> 
 				
-				<span>servings:</span>
+				<span>Servings:</span>
 				<select id="fruit_servings" name="fruit_servings">
 						<option value="1">1</option>
 						<option value="2">2</option>
@@ -192,7 +192,11 @@
 				</select>
 				
 				<div id="food_choose"></div>
+				<div id="results_wrapper">
+					<div id="results" style="width:550px; height:100px; position:relative; top:0px; border:solid #cccccc 1px; overflow:scroll;"></div>
+				</div>
 
+		
 
 
 				<!--
@@ -233,14 +237,14 @@
 					<!-- </form> -->
 						
 				<div id="data_container">
-					<table border="3" id="table_container">
+					<table class="box-table-b" id="table_container">
 						<tr>
 							<!-- <th>Type</th> -->
 							<th>Type</th>
 							<th>Servings</th>
 							<th>Food Content</th>
 							<th>Total Calories</th>
-							<th>Delete</th>
+							<th></th>
 						</tr>
 					</table>
 				</div>
