--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -150,51 +150,52 @@
 		</div>
 
 
-			<!-- HTML FOR LIGHTBOX -->
-			<div id = "light" class="white_content">
-				<h5>Detailed Meal Entry Form</h5>
-				<!-- FOOD SEARCH FORM -->
-				
-				
+		<!-- HTML FOR LIGHTBOX -->
+		<div id = "light" class="white_content">
+			<h5>Detailed Meal Entry Form</h5>
+			<!-- FOOD SEARCH FORM -->
+
+			<div id="chooseMeal">	
+				<span>Choose Meal to Enter: </span>
 				<form id="mealType">
-					<span>Meal Type : </span>
-					<input class ="mealType" type="radio" name="group1" id="breakfast" value="breakfast" checked>breakfast
-					<input type="radio" name="group1" id="lunch" value="lunch">lunch 
-					<input type="radio" name="group1" id="dinner" value="dinner">dinner
-					<input type="radio" name="group1" id="snack" value="snack">snack
+
+					<span class="rad"><input class ="mealType" type="radio" name="group1" id="breakfast" value="breakfast" checked><span class="m" >Breakfast</span></span>
+					<span class="rad" ><input type="radio" name="group1" id="lunch" value="lunch"><span class="m" >Lunch</span> </span>
+					<span class="rad"><input type="radio" name="group1" id="dinner" value="dinner"><span class="m" >Dinner</span></span>
+					<span class="rad"><input type="radio" name="group1" id="snack" value="snack"><span class="m" >Snack</span></span>
 				</form>
+			</div>
 
-				
-				<form id="FoodSearch">
-					Search For Food Item: <input type="text" id="search_query"> <br>
+
+			<form id="FoodSearch">
+				Search For Food Item: <input type="text" id="search_query"> <br>
 				<div id="food_choose"></div>
 
-					item: <input type="text" id="search_query" style="width:500px;" > 
-					<!-- <input type="submit" value="Search" id="search"> -->
-					<input type="hidden" id="calories_field"> 
-					<input type="hidden" id="foodid">
-								
-					<input type="button" id="btn_additem" value="Add!">
-				</form> 
-				
-				<span>Servings:</span>
-				<select id="fruit_servings" name="fruit_servings">
-						<option value="1">1</option>
-						<option value="2">2</option>
-						<option value="3">3</option>
-						<option value="4">4</option>
-						<option value="5">5</option>
-						<option value="6">6</option>
-						<option value="7">7</option>
-						<option value="8">8</option>
-						<option value="9">9</option>
-						<option value="10">10</option>
-				</select>
-				
-				<div id="food_choose"></div>
-				<div id="results_wrapper">
-					<div id="results" style="width:550px; height:100px; position:relative; top:0px; border:solid #cccccc 1px; overflow:scroll;"></div>
-				</div>
+				<!-- <input type="submit" value="Search" id="search"> -->
+				<input type="hidden" id="calories_field"> 
+				<input type="hidden" id="foodid">
+
+				<input type="button" id="btn_additem" value="Add!">
+			</form> 
+
+			<span>Servings:</span>
+			<select id="fruit_servings" name="fruit_servings">
+				<option value="1">1</option>
+				<option value="2">2</option>
+				<option value="3">3</option>
+				<option value="4">4</option>
+				<option value="5">5</option>
+				<option value="6">6</option>
+				<option value="7">7</option>
+				<option value="8">8</option>
+				<option value="9">9</option>
+				<option value="10">10</option>
+			</select>
+
+			<div id="food_choose"></div>
+			<div id="results_wrapper">
+				<div id="results" style="width:550px; height:100px; position:relative; top:0px; border:solid #cccccc 1px; overflow:scroll;"></div>
+			</div>
 
 		
 
