--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -152,21 +152,25 @@
 
 		<!-- HTML FOR LIGHTBOX -->
 		<div id = "light" class="white_content">
-			<h5>Detailed Meal Entry Form</h5>
+			<h5>Meal Entry Form</h5>
 			<!-- FOOD SEARCH FORM -->
 
 			<div id="chooseMeal">	
-				<span>Choose Meal to Enter: </span>
-				<form id="mealType">
+				<div id="mealandbutton">
+					<span id="choosemealtoenter">Choose Meal to Enter: </span>
+					<form id="mealType">
 
-					<span class="rad"><input class ="mealType" type="radio" name="group1" id="breakfast" value="breakfast" checked><span class="m" >Breakfast</span></span>
-					<span class="rad" ><input type="radio" name="group1" id="lunch" value="lunch"><span class="m" >Lunch</span> </span>
-					<span class="rad"><input type="radio" name="group1" id="dinner" value="dinner"><span class="m" >Dinner</span></span>
-					<span class="rad"><input type="radio" name="group1" id="snack" value="snack"><span class="m" >Snack</span></span>
-				</form>
+						<span class="rad"><input class ="mealType" type="radio" name="group1" id="breakfast" value="breakfast" checked><span class="m" >Breakfast</span></span>
+						<span class="rad" ><input type="radio" name="group1" id="lunch" value="lunch"><span class="m" >Lunch</span> </span>
+						<span class="rad"><input type="radio" name="group1" id="dinner" value="dinner"><span class="m" >Dinner</span></span>
+						<span class="rad"><input type="radio" name="group1" id="snack" value="snack"><span class="m" >Snack</span></span>
+					</form>
+				</div>
+				<div id="next"> Next </div> <!-- next page button -->
 			</div>
 
 
+			<div id="detailedForm">
 			<form id="FoodSearch">
 				Search For Food Item: <input type="text" id="search_query"> <br>
 				<div id="food_choose"></div>
@@ -253,6 +257,7 @@
 				<button id='btn_addmeal'>Add Meal</button>
 
 
+			</div>
 			</div>
 			<div id="fade" class="black_overlay"></div>
 		</body>
