--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -160,10 +160,10 @@
 					<span id="choosemealtoenter">Choose Meal to Enter: </span>
 					<form id="mealType">
 
-						<span class="rad"><input class ="mealType" type="radio" name="group1" id="breakfast" value="breakfast" checked><span class="m" >Breakfast</span></span>
-						<span class="rad" ><input type="radio" name="group1" id="lunch" value="lunch"><span class="m" >Lunch</span> </span>
-						<span class="rad"><input type="radio" name="group1" id="dinner" value="dinner"><span class="m" >Dinner</span></span>
-						<span class="rad"><input type="radio" name="group1" id="snack" value="snack"><span class="m" >Snack</span></span>
+						<label><span class="rad"><input class ="mealType" type="radio" name="group1" id="breakfast" value="breakfast" checked><span class="m" >Breakfast</span></span></label>
+						<label>	<span class="rad" ><input type="radio" name="group1" id="lunch" value="lunch"><span class="m" >Lunch</span> </span></label>
+						<label><span class="rad"><input type="radio" name="group1" id="dinner" value="dinner"><span class="m" >Dinner</span></span></label>
+						<label><span class="rad"><input type="radio" name="group1" id="snack" value="snack"><span class="m" >Snack</span></span></label>
 					</form>
 				</div>
 				<div id="next"> Next </div> <!-- next page button -->
