--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -1,6 +1,6 @@
 h5{
 	font-size:15pt;
-	margin: 10px 10px;
+	margin: 10px 19px;
 	font-weight:normal;
 }
 
@@ -28,7 +28,7 @@ h5{
 #mealandbutton{
 		border: 1px #ccc solid;	
 		overflow:auto;
-	padding:20px 15px 50px 20px;
+	padding:20px 15px 100px 20px;
 	margin:42px 20px;
 
 }
@@ -45,7 +45,7 @@ h5{
 	text-align:center;
 	padding-top:10px;
 	margin-right:20px;
-	margin-top:20px;
+	margin-top:10px;
 	float:right;
 	clear:both;
 	-webkit-border-radius: 3px;
@@ -63,13 +63,20 @@ h5{
 }
 /* CSS FOR DETAILED MEAL ENTRY FORM */
 #results {
-	width:500px;
+	width:400px;
 	height:100px;
 	position:relative;
 	top:0px;
 	margin:10px auto;
 	border:solid #cccccc 1px;
 	overflow: scroll;
+	background:white;
+	font-size:10pt;
+	color:black;
+
+}
+#results_wrapper{
+	padding-left:20px;
 }
 
 
@@ -110,8 +117,9 @@ h5{
 
 #btn_additem{
 	float:right;
-	height:30px;
-	width:60px;
+	height:25px;
+	width:80px;
+	margin:0px 000px 0px 0px;
 }
 
 .delete_btn{
@@ -135,28 +143,31 @@ h5{
 #btn_addmeal{
 	height: 40px;
 	width:90px;
-	background:#7e9eff;
-	-webkit-border-radius:3px;
+	color:#eee;
+	background:#5983FF;
+	text-align:center;
+	padding-top:1px;
+	margin-right:20px;
+	margin-top:10px;
+	float:right;
+	clear:both;
+	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
-	border-radius:3px;
-	border:1px solid #aaa;
+	border-radius: 3px;
+	border:0px solid white;
 }
 
 #btn_addmeal:hover {
-	background:#5983FF;
+	background:#6b95ff;
 }
 
-#results{
-	padding:10px 20px 0px 20px;
-	font-size:10pt;
-}
 /***************************
  * Scroll Bar CSS          *
  ***************************/
 
 ::-webkit-scrollbar {
-    width: 7px;
-	height:7px;
+    width: 8px;
+	height:8px;
 	padding-right:3px;
 }
  
@@ -202,4 +213,41 @@ h5{
 }
 
 
+#searchpref{
+	display:block;
+	margin 0px auto;
+	font-size:10pt;
+	/*position:absolute;*/
+	left:-40;
+	width:100%;
+}
 
+#search_query{
+	width:300px;
+}
+
+#fd{
+	background:#B9C9FE;
+	overflow:auto;
+	padding:10px 10px 10px 0px;
+	color:#fff;
+	font-weight:bold;
+}
+
+#selector{
+	float:left;
+	margin-top:0;
+	margin-left:20px;
+}
+
+#searcherbar{
+	width:400px;
+	margin:0px;
+	margin-left:20px;
+	display:inline;
+
+}
+
+#FoodSearch{
+ 	width:500px;
+}
