--- a/css/tab.css
+++ b/css/tab.css
@@ -7,10 +7,11 @@ a:focus {
 }
 
 #tabs_container {
-	width: 1050px;
+	width: 1250px;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	margin:auto;
+	float:left;
 	background:#fff;
 	position:relative;
 	overflow:auto;
