--- a/view/login.html
+++ b/view/login.html
@@ -6,7 +6,7 @@
 	<!--Style/Javascript links-->
 	<link rel="stylesheet" href="../css/login.css" type="text/css"/>
 	<!--Style for login box-->
-	<link href="loginboxsupport/css/style.css" rel="stylesheet" type="text/css"/>
+	<link href="../css/styleloginsupport.css" rel="stylesheet" type="text/css"/>
 
 	<!--Javascript for login box-->
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
@@ -60,7 +60,7 @@
     	<!--END SLIDE-IN ICONS-->
 
 	<!--LOGIN FORM-->
-	<form name="login-form" class="login-form" action="" method="post">
+	<form name="login-form" class="login-form" action="/login" method="post">
 
 	<!--HEADER-->
     	<div class="header">
