--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@ body{
 	background:#eee;
 	min-width:800px;
 	background-image:url('../public/images/bedge_grunge.png');
+	overflow:auto;
+	background-image:url('../images/sky.JPG');
+	background-size:100%;
+	height:100%;
+	background-repeat:no-repeat;
 }
 
 
@@ -24,16 +29,21 @@ a:visited {
  	color:black;
 }
 
+#calendar{
+	width: 650px;
+}
+
 #calendar a:hover {
 	color:#999;
 }
 
 
 h2{
-	font-size: 45px;
-	margin-top:20px;
+	font-size: 20px;
+	margin-top:0px;
 	margin-bottom:20px;
-	text-align: center;
+	margin-left:75px;
+	color:white;
 }
 
 
@@ -118,15 +128,23 @@ a.monthbutton{
 	margin:auto;
 	display:block;
 	position:absolute;
-	top:140px;
+	top:160px;
 	left:10%;
 	width:1050px;
 }
 
 #dayDataholder{
 	height:580px;
-	margin-top:22px;
-	width:400px;
+	float:right;
+	margin-top:0px;
+	width:360px;
 	background-image:url('../public/images/navy_blue.png');
 	overflow:auto;
+}
+
+
+#headerHolder{
+	display:block;
+margin-left:50px;
+margin-top:30px;
 }
