--- a/css/tab.css
+++ b/css/tab.css
@@ -7,26 +7,23 @@ a:focus {
 }
 
 #tabs_container {
-	width: 1250px;
+	width: 1050px;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	margin:auto;
 	float:left;
-	background:#fff;
+	background:transparent;
 	position:relative;
 	overflow:auto;
-	-webkit-border-radius:9px;
-	-moz-border-radius:9px;
-	border-radius:9px;
+
 }
 
 .tabs{
-	background-image:url('../public/images/bedge_grunge.png');
+	background-color:transparent;
 }
 
 #tabs_container ul.tabs {
 	list-style: none;
-	border-bottom: 1px solid #ccc;
 	height: 21px;
 	margin: 0;
 }
@@ -59,6 +56,10 @@ div.tab_contents_container{
 	border-top: none;
 	padding: 10px;
 	overflow:auto;
+	background:#fff;
+	-webkit-border-radius:5px;
+	-moz-border-radius:5px;
+	border-radius:5px;
 }
 
 div.tab_contents{
@@ -71,8 +72,16 @@ div.tab_contents_active{
 
 #calendar_tab{
 	overflow:auto;
+	display:inline-block;
+	/*border:2px blue dotted;*/
 }
 
 div.clear {
 	clear:both;
+}
+
+
+#holder{
+	margin:0;
+	overflow:auto;
 }
