--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -216,10 +216,10 @@
 				<div id="next"> Next </div> <!-- next page button -->
 			</div>
 
-			<div id="yesterdayMealContainer">
-				<div id="yesterdayMealContent"></div>
-				<button id="showYesterday">Show Yesterday Meal!</button>
-			</div>
+			<!-- <div id="previousMealContainer">
+				<div id="previousMealContent"></div> -->
+			<button id="showPrevious">Show Previous Meal!</button>
+			<!-- </div> -->
 
 			<div id="detailedForm">
 				<div id="searchpref">
