--- a/css/login.css
+++ b/css/login.css
@@ -1,4 +1,15 @@
 /*Login page css*/
+*{
+	margin:0;
+	padding:0;
+}
+
+html{
+	width:100%;
+	overflow:hidden;
+
+}
+
 body {
 	background-repeat: no-repeat;
 	background-size: 100%;
@@ -52,16 +63,23 @@ a:active {
 	width: 100%;
 	height: 5%;
 	color: #FFFFFF;
+	margin-left:10px;
 }
 
+#toploginbar a{
+	font-size: 15pt;
+	padding:5px;
+}
 
 #bottomloginbar {
 	width: 100%;
 	height: 5%;;
 	position: absolute;
-	margin-left: 57px;
+	left:0;	
 	bottom: 0;
-	color: white;
+	color: #ddd;
+	font-size:11pt;
+	text-align:center;
 }
 
 
