--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -97,7 +97,7 @@
 							<tr>
 								<td>Calories In (Cal)/Weight (lbs)</td>
 								<td>
-									<div id="placeholder" style="width:600px;height:300px"></div>
+									<div id="placeholder"></div>
 									<p id="choices" style="float:right; width:135px;"></p>
 									<p>Start: <input type="text" id="start"/> End: <input type="text" id="end"/></p>
 								</td>
