--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,10 @@
 }
 
 body{
-	background:#eee;
 	min-width:800px;
-	background-image:url('../public/images/bedge_grunge.png');
 	overflow:auto;
 	background-image:url('../images/sky.JPG');
 	background-size:100%;
-	height:100%;
 	background-repeat:no-repeat;
 }
 
@@ -110,15 +107,15 @@ a.monthbutton{
 }
 
 
-#calendar_tab{
-	margin-top:55px;
-	margin-bottom:40px;
-}
-
-
 #graph{
 	margin:40px auto;
+	width:400px;
 
+}
+
+#placeholder{
+	width: 500px;
+	height:300px;
 }
 
 
@@ -145,6 +142,77 @@ a.monthbutton{
 
 #headerHolder{
 	display:block;
-margin-left:50px;
-margin-top:30px;
+	margin-left:50px;
+	margin-top:30px;
+}
+
+
+/* CSS FOR DAILY DATA */
+#dayData{
+	display:block;
+	background:white;
+	width:300px;
+	height:300px;
+	border:#ccc 1px solid;
+	margin: auto;
+	margin-top:120px;
+	margin-left:20px;
+	margin-bottom:30px;
+	padding:20px;
+	padding-left:0px;
+	float:left;
+}
+
+
+#dayDataHeader{
+	float left;
+	display:inline-block;
+	padding-left:20px;
+}
+
+#box-table-a {
+	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+	font-size: 12px;
+	width: 280px;
+	text-align: left;
+	border-collapse: collapse;
+	display:block;
+	float:right;
+	position:relative;
+	margin: 30px 0px 0px auto;
+}
+
+#box-table-a th {
+	font-size: 13px;
+	font-weight: normal;
+	background: #B9C9FE;
+	border-top: 4px solid #AABCFE;
+	border-bottom: 1px solid white;
+	color: #039;
+	padding: 8px;
+}
+
+#box-table-a td {
+	background: #E8EDFF;
+	border-bottom: 1px solid white;
+	color: #669;
+	border-top: 1px solid transparent;
+	padding: 14px 4px 14px 4px;
+}
+
+#box-table-a td:last-child {
+	text-align:center;
+}
+
+
+#holder{
+	width:615px;
+	margin:0;
+	overflow:auto;
+}
+
+/* this is the actual calendar */
+#fatsecret_output_3 
+{	float:left;
+	margin:0;
 }
