--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -27,7 +27,7 @@
 
 	<body>
 		<div id="headerHolder">
-			<img src="../images/logo.png">
+			<a href="/"><img src="../images/logo.png"></a>
 			<h2>Calorie Tracker</h2>
 		</div>
 		<div id="tabandday_cont">
