--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -166,6 +166,9 @@
 				<h5>Auto generate your meal?</h5>
 				<label><span class="rad"><input class ="mealType" type="radio" name="group1" id="yes_auto" value="yes_auto" checked><span class="m" >Yes</span></span></label>
 				<label><span class="rad" ><input type="radio" name="group1" id="no_auto" value="no_auto"><span class="m" >No</span></span></label>
+				
+				<div id="next_autogenDialog" class="next"> Next </div>
+				
 			</div>
 			
 			<div id="optionSelect">
