added some cool style shit

--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -23,6 +23,7 @@
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
 		<link rel="stylesheet" href="css/tab.css" type="text/css" />
 		<link rel="stylesheet" href="css/lightbox.css" type="text/css" />	
+		<link rel="stylesheet" href="css/jquery-ui-1.10.2.custom.css" type="text/css" />
 
 	</head>
 
