--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -267,7 +267,9 @@
 				</div>
 
 				<button id='btn_addmeal'>Add Meal</button>
-
+				<button id='btn_delete_meal'>Delete Meal</button>
+				<!-- <button id=' -->
+				
 
 			</div>
 		</div>
