--- a/view/login.html
+++ b/view/login.html
@@ -31,7 +31,7 @@
 	
 
 </head>
-<body id="hello" background="../images/sky.JPG" style="height: 100%">
+<body id="hello" background="../images/sky.JPG">
 
 <!--Top Bar-->
 <div id="toploginbar">
