--- a/css/login.css
+++ b/css/login.css
@@ -60,8 +60,8 @@ a:active {
 */
 
 #toploginbar {
-	width: 100%;
-	height: 5%;
+	width: 400px;
+	height: 50px;
 	color: #FFFFFF;
 	margin-left:10px;
 }
