--- a/view/login.html
+++ b/view/login.html
@@ -60,7 +60,7 @@
     	<!--END SLIDE-IN ICONS-->
 
 	<!--LOGIN FORM-->
-	<form name="login-form" class="login-form" action="/login" method="post">
+	<form name="login-form" id="login-form" class="login-form" action="/login" method="post">
 
 	<!--HEADER-->
     	<div class="header">
@@ -70,7 +70,7 @@
    	<!--END HEADER-->
 	
 	<!--CONTENT-->
-   	<div class="content">
+   	<div class="content">	
 	<!--USERNAME--><input name="username" type="text" class="input username" value="Username" onfocus="this.value=''" /><!--END USERNAME-->
     	<!--PASSWORD--><input name="password" type="password" class="input password" value="Password" onfocus="this.value=''" /><!--END PASSWORD-->
     	</div>
