--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -26,15 +26,13 @@ h5{
 #chooseMeal{
 	display:none;
 	overflow:auto;
-
 }
 
 #mealandbutton{
-		border: 1px #ccc solid;	
-		overflow:auto;
-	padding:20px 15px 100px 20px;
+	border: 1px #ccc solid;	
+	overflow:auto;
+	padding:20px 15px 40px 20px;
 	margin:42px 20px;
-
 }
 
 #choosemealtoenter{
@@ -48,18 +46,17 @@ h5{
 	height:30px;
 	text-align:center;
 	padding-top:10px;
-	margin-right:20px;
 	margin-top:10px;
 	float:right;
 	clear:both;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
+	position:absolute;
+	bottom:30px;
+	right:30px;
 }
 
-#next:hover {
-	background:#6b95FF;
-}
 
 
 #detailedForm{
@@ -155,7 +152,20 @@ h5{
 	background:#ff8d8d;
 }
 
-#btn_addmeal, #btn_addweight{
+#results div {
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	cursor:default;
+}
+
+#results div:hover {
+	color:#bbb;
+}
+
+#btn_addmeal, #btn_addweight, .next, #next_choosemeal,#next_autogenDialog
+{
 	height: 40px;
 	width:90px;
 	color:#eee;
@@ -172,7 +182,7 @@ h5{
 	border:0px solid white;
 }
 
-#btn_addmeal:hover {
+#btn_addmeal:hover, .next:hover {
 	background:#6b95ff;
 }
 
@@ -265,4 +275,13 @@ h5{
 
 #FoodSearch{
  	width:500px;
+}
+
+
+#prev_autogenDialog, #prev_optionselect, #prev_choosemeal{
+	position:absolute;
+	left:30px;
+	bottom:30px;
+	background:#ddd;
+	color:#333;
 }
